# delineate

./: .gitignore  LICENSE.txt  MANIFEST.in  README.txt  check.sh  pyproject.toml  requirements.txt  setup.py
delineate/: __init__.py  efficient_joint_prob.py  joint_from_all_scenarios.py  marginal_prob.py  model.py
delineate/test/: test_lineage_tree_fundamentals.py  test_population_tree_fundamentals.py  test_probabilities.py
docs/: concepts.html  genindex.html  index.html  index.md  install.html  objects.inv  quickstart.html  search.html  searchindex.js  workflow.html  workflow1.html
docs/_sources/: concepts.rst.txt  index.rst.txt  install.rst.txt  quickstart.rst.txt  workflow1.rst.txt
docs/_static/: bizstyle.js
docs/_static/css/: docs.css
docs/source/: conf.py  index.rst
src/delineate/: __init__.py  control.py  estimate.py  model.py  summarize.py  utility.py
src/delineate-docs/: Makefile
tests/: __init__.py  _pathmap.py  test_analyses.py  test_patristic_paths.py  test_probabilities.py
tests/data/: five_leaf.tre  joint_probability_of_species.json  marginal_probability_of_species.json  three_leaf.tre  two_leaf.tre
tests/libexec/: check.sh  marginal_from_joint.sh
tests/supplemental/: .gitignore  README.txt  check.sh  efficient_joint_prob.py  gen-basic-probability-tests-data.py  marginal_prob.py
tests/zptests/: run1_spr0.001_.0001.job  run1_spr0.001_.0001.json  run1_spr0.001_.0001.partition-probs.json  run1_spr0.005_.0001.job  run1_spr0.010_.0001.job  run1_spr0.050_.0001.job  run1_spr0.050_.0001.nex  run1_spr0.100_.0001.job  run1_spr0.100_.json
(+203 files in other folders)
